# fxbot

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_and_run.sh
backtest/: backtest_engine.py  run_6month_backtest.py
config/: config.yaml
dashboard/: dashboard.py
data/: validated_config_notes.txt
src/: __init__.py  alert_system.py  circuit_breaker.py  correlation_guard.py  data_engine.py  execution_engine.py  feature_engine.py  liquidity_engine.py  logger.py  news_filter.py  risk_engine.py  session_filter.py  signal_monitor.py  spread_controller.py  strategy_engine.py  structure_engine.py  trade_manager.py  volatility_engine.py
tests/: __init__.py  test_alert_system.py  test_backtest_engine.py  test_circuit_breaker.py  test_correlation_guard.py  test_data_engine.py  test_execution_engine.py  test_feature_engine.py  test_integration_phase2.py  test_integration_phase4.py  test_liquidity_engine.py  test_news_filter.py  test_risk_engine.py  test_session_filter.py  test_spread_controller.py  test_strategy_engine.py  test_structure_engine.py  test_trade_manager.py  test_volatility_engine.py
